@startuml
skinparam backgroundColor #0b0f14
skinparam defaultFontColor #d8dee9
skinparam ArrowColor #c0c0c0
skinparam packageBorderColor #5e81ac
skinparam classBorderColor #81a1c1
skinparam classBackgroundColor #111827
skinparam packageBackgroundColor #0f172a
skinparam shadowing false
skinparam packageStyle rectangle
hide empty members

package "dto\nru.itmo.backend.dto.rental" {
  class RentalListingDto
}

package "controller\nru.itmo.backend.controller" {
  class RentalListingController
}

package "service\nru.itmo.backend.service" {
  class RentalListingService
}

package "repository\nru.itmo.backend.repository" {
  interface RentalListingRepository
}

package "model\nru.itmo.backend.model" {
  class RentalListing
}

package "db" {
  class DB <<database>>
}

RentalListingController ..> RentalListingService
RentalListingController ..> RentalListingDto : returns List

RentalListingService ..> RentalListingRepository
RentalListingRepository ..> RentalListing
RentalListingRepository ..> DB

@enduml
